bin_PROGRAMS = raptorrtpClient

raptorrtpClient_SOURCES = raptorrtpClient.cpp 
raptorrtpClient_LDFLAGS = -lcurl ../install/lib/libraptorrtp.a ../install/lib/libpvraptor.a ../install/lib/libliveMedia.a ../install/lib/libgroupsock.a ../install/lib/libBasicUsageEnvironment.a ../install/lib/libUsageEnvironment.a
#raptorrtpClient_LDFLAGS = -L../install/lib/

#../install/lib/UsageEnvironment.a ../install/lib/ ../install/lib/liveMedia.a ../install/lib/raptorrtp 
#libpvraptor_la_LDFLAGS= -version-info @RAPTORRTP_LIBRARY_VERSION@
#library_includedir=$(includedir)/raptorrtp
#library_include_HEADERS = ../include/*.hh
